# audio_search_demo

./: .gitignore  README.md  pyproject.toml
audio_search_demo/: app.py  audio_search_utils.py  embedding_text.py  main.py  make_embeddings_db.py  qdrant_manager.py  qdrant_work.py  search_by_text.py  sentence_embedder.py  settings.py
docs/: memo.md
src/: audio_search_utils.py  extruct_audio.py  youtube_utils.py
