[tool.poetry]
name = "audio-search-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "audio_search_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2024.3.10"
moviepy = "^1.0.3"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
